--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -8,3 +8,4 @@ commands:
     - Elgentos\Magento\Command\Extension\DisableCommand
     - Elgentos\Magento\Command\Extension\EnableCommand
     - Elgentos\Magento\Command\Extension\TranslationsCommand
+    - Elgentos\Magento\Command\Dev\Events\FireCommand
