--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -9,3 +9,4 @@ commands:
     - Elgentos\Magento\Command\Extension\EnableCommand
     - Elgentos\Magento\Command\Extension\TranslationsCommand
     - Elgentos\Magento\Command\Dev\Events\FireCommand
+    - Elgentos\Magento\Command\Customer\CleanTaxvatCommand
