--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -10,3 +10,4 @@ commands:
     - Elgentos\Magento\Command\Extension\TranslationsCommand
     - Elgentos\Magento\Command\Dev\Events\FireCommand
     - Elgentos\Magento\Command\Customer\CleanTaxvatCommand
+    - Elgentos\Magento\Command\System\Url\Rewrites\ExportCommand
