Added dev:template-vars command to find vars and blocks that are not whitelisted to be compatible with SUPEE-6788 and Magento 1.9.2.2

--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -8,6 +8,7 @@ commands:
     - Elgentos\Magento\Command\Extension\DisableCommand
     - Elgentos\Magento\Command\Extension\EnableCommand
     - Elgentos\Magento\Command\Extension\TranslationsCommand
+    - Elgentos\Magento\Command\Dev\TemplateVars
     - Elgentos\Magento\Command\Dev\Events\FireCommand
     - Elgentos\Magento\Command\Customer\CleanTaxvatCommand
     - Elgentos\Magento\Command\System\Url\Rewrites\ExportCommand
