--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,27 @@
 {
-    "name": "peterjaap/magerun-addons",
-    "type": "library",
-    "description": "Addon commands for N98 MageRun",
-    "keywords": ["magerun"],
-    "homepage": "https://github.com/peterjaap/magerun-addons",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Peter Jaap Blaakmeer",
-            "email": "peterjaap@elgentos.nl",
-            "homepage": "http://www.elgentos.nl",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": ">=5.3.0"
-    },
-    "autoload": {
-        "psr-0": {
-            "Elgentos": "src/"
-        }
+  "name": "peterjaap/magerun-addons",
+  "type": "library",
+  "description": "Addon commands for N98 MageRun",
+  "keywords": [
+    "magerun"
+  ],
+  "homepage": "https://github.com/peterjaap/magerun-addons",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Peter Jaap Blaakmeer",
+      "email": "peterjaap@elgentos.nl",
+      "homepage": "http://www.elgentos.nl",
+      "role": "Developer"
     }
+  ],
+  "require": {
+    "php": ">=5.3",
+    "magento-hackathon/magento-composer-installer": "*"
+  },
+  "autoload": {
+    "psr-0": {
+      "Elgentos": "src/"
+    }
+  }
 }
