--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -8,6 +8,7 @@ commands:
     - Elgentos\Magento\Command\Extension\TranslationsCommand
     - Elgentos\Magento\Command\Dev\TemplateVars
     - Elgentos\Magento\Command\Dev\OldAdminRouting
+    - Elgentos\Magento\Command\Dev\Events\ListCommand
     - Elgentos\Magento\Command\Dev\Events\FireCommand
     - Elgentos\Magento\Command\Dev\Events\ListenCommand
     - Elgentos\Magento\Command\Customer\CleanTaxvatCommand
