Added catalog clean image cache
+ added commandline catalog image clean

--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -14,6 +14,7 @@ commands:
     - Elgentos\Magento\Command\Customer\CleanTaxvatCommand
     - Elgentos\Magento\Command\System\Url\Rewrites\ExportCommand
     - Elgentos\Magento\Command\Media\Images\CleanTablesCommand
+    - Elgentos\Magento\Command\Media\Images\CleanCacheCommand
     - Elgentos\Magento\Command\Media\Images\DefaultImageCommand
     - Elgentos\Magento\Command\Media\Images\RemoveDuplicatesCommand
     - Elgentos\Magento\Command\Media\Images\RemoveOrphansCommand
