--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -4,6 +4,7 @@ autoloaders:
 commands:
   customCommands:
     - Elgentos\Magento\Command\System\Store\Config\BaseUrlSetCommand
+    - Elgentos\Magento\Command\Catalog\Product\ImportCommand
     - Elgentos\Magento\Command\Media\SyncCommand
     - Elgentos\Magento\Command\Extension\TranslationsCommand
     - Elgentos\Magento\Command\Dev\TemplateVars
@@ -12,6 +13,7 @@ commands:
     - Elgentos\Magento\Command\Dev\Events\FireCommand
     - Elgentos\Magento\Command\Dev\Events\ListenCommand
     - Elgentos\Magento\Command\Eav\Attributes\AddToSetCommand
+    - Elgentos\Magento\Command\Eav\Attributes\CreateCommand
     - Elgentos\Magento\Command\Customer\CleanTaxvatCommand
     - Elgentos\Magento\Command\System\Url\Rewrites\ExportCommand
     - Elgentos\Magento\Command\Media\Images\CleanTablesCommand
