Added command for setting package & template in magerun

--- a/n98-magerun.yaml
+++ b/n98-magerun.yaml
@@ -20,3 +20,4 @@ commands:
     - Elgentos\Magento\Command\Media\Images\RemoveDuplicatesCommand
     - Elgentos\Magento\Command\Media\Images\RemoveOrphansCommand
     - Elgentos\Magento\Command\Dev\PossibleSqlInjection
+    - Elgentos\Magento\Command\System\Store\Config\PackageThemeCommand
